--- a/index.ipynb
+++ b/index.ipynb
@@ -39,16 +39,16 @@
     "Four of the most common collection types in Python are Lists, Tuples, Sets and Dictionaries.\n",
     "* A **List** is an *ordered*, *mutable* collection. So it's a collection of items that you control the order of and that you can add, remove and/or update items within it. It's written in Python using square brackets:\n",
     "```\n",
-    "    city_list = [\"Chicago\", \"Madison\", \"Minneapolis\"]\n",
+    "    city_list = [\"Chicago\", \"Madison\", \"Minneapolis\", \"Madison\"]\n",
     "```\n",
     "* A **Tuple** is an *immutable* list. It's ordered, but you can't change it - so you can't add, edit or delete elements within a tuple. It's written in Python using round brackets:\n",
     "```\n",
-    "    unchangeable_city_list = (\"Chicago\", \"Madison\", \"Minneapolis\")\n",
+    "    unchangeable_cities = (\"Chicago\", \"Madison\", \"Minneapolis\", \"Madison\")\n",
     "```\n",
     "* A **Set** is an *unordered* collection. It is *mutable* because you can add or remove items from it after creating it. Also, with a Set, you can't have duplicate items (no two of the elements can be identical). It's written in Python using curly braces:\n",
     "\n",
     "```\n",
-    "    unique_city_list = {\"Chicago\", \"Madison\", \"Minneapolis\"}\n",
+    "    unique_cities = {\"Chicago\", \"Madison\", \"Minneapolis\"}\n",
     "```\n",
     "* A **Dictionary** in a collection of key:value pairs that are *mutable* and *unordered*. They are a very common data type for structured information. It's written in Python using curly braces:\n",
     "```\n",
@@ -56,7 +56,7 @@
     "        \"first_name\": \"Jim\",\n",
     "        \"last_name\": \"Collins\",\n",
     "        \"email\": \"jim@gmail.com\",\n",
-    "        \"dob\": \"1965/02/22\"\n",
+    "        \"dob\": \"02/22/1965\"\n",
     "       }\n",
     "```\n",
     "\n",
@@ -64,7 +64,7 @@
     "Here are some heuristics for getting started:\n",
     "* If you want a unique collection (e.g. all of the cities you are investigating people in), a **Set** is probably a good fit as you don't have to worry about duplicate entries and it's usually pretty quick to do lookups against it.\n",
     "* If you have a single collection of data points (list of cities, list of states, list of company names, list of business codes, etc) and you might want to support duplicates, a **List** is probably a good collection for you to use.\n",
-    "* If you have a list of data points that you know will never change such as a list of US states (sure, we might end up annexing Canada, but in general the list of US states is unlikely to change on a regular basis), you could use a **Tuple**. It's not really that different from a list, but it makes it very clear to others reading your code that you do not expect to make any changes to that list of items.\n",
+    "* If you have a list of data points that you know will never change such as a list of US states *(sure, we might end up annexing Canada, but in general the list of US states is unlikely to change on a regular basis)*, you could use a **Tuple**. It's not really that different from a list, but it makes it very clear to others reading your code that you do not expect to make any changes to that list of items.\n",
     "* Finally, if you have more complex data (think a spreadsheet, not a list), you're probably going to want to use a **Dictionary** to store that (at least until next week when we introduce you to the Pandas library and their wonderful DataFrames!)"
    ]
   },
